--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <title>Automated-Smart-Touch-Panel for home</title>
 </head>
 <body>
-    <h1> &#127968; Automated-Smart-Touch-Panel for home &#127968; <hr><hr>
+    <h1 style="color: blue;"> &#127968; Automated-Smart-Touch-Panel for home &#127968; <hr><hr>
         <h3 style="color: brown;" >
-            <small style="color: blue;" > Creating an automated smart touch panel for home involves integrating various technologies and components to control and monitor different aspects of your home, such as lighting, temperature, security, and entertainment systems 
+            <small style="color: rgb(107, 27, 107);" > Creating an automated smart touch panel for home involves integrating various technologies and components to control and monitor different aspects of your home, such as lighting, temperature, security, and entertainment systems <br>
             
             </small>
             Here's an overview of how it works:
