--- a/index.html
+++ b/index.html
@@ -4,19 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Automated-Smart-Touch-Panel for home</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@500&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <h1 style="color: blue;"> &#127968; Automated-Smart-Touch-Panel for home &#127968; <hr><hr>
-        <h3 style="color: brown;" >
-            <small style="color: rgb(107, 27, 107);" > Creating an automated smart touch panel for home involves integrating various technologies and components to control and monitor different aspects of your home, such as lighting, temperature, security, and entertainment systems <br>
-            
-            </small>
+    <header><h1> &#127968; Automated-Smart-Touch-Panel for home &#127968; </h1></header>
+    <p> Creating an automated smart touch panel for home involves integrating various technologies and components to control and monitor different aspects of your home, such as lighting, temperature, security, and entertainment systems <br></p>
+        <h3>
             Here's an overview of how it works:
         </h3>
-        <h4 style="color: darkslategray;" >
+        <h4>
             Components Needed:
         </h4>
-        <ol style="color: darkviolet;" >
+        <ol>
             <li>Touch Panel: <br> You'll need a touchscreen display or a tablet that serves as the interface for controlling your smart home. This can be wall-mounted or portable. <img src= height="101" alt=""></li><hr>
             <li>Microcontroller/Controller: <br> A microcontroller (like Arduino, Raspberry Pi, or specialized home automation controllers) acts as the brain of your system. It communicates with various devices and sensors and handles user inputs from the touch panel. <img src="" height="101" alt=""></li><hr>
             <li>Smart Home Devices: <br> You'll need various smart devices compatible with your chosen controller. These can include smart lights, thermostats, door locks, cameras, and more. Ensure they use communication protocols like Wi-Fi, Zigbee, Z-Wave, or Bluetooth. <img src="g" height="101"></li><hr>
@@ -24,9 +26,8 @@
             <li>Sensors: Communication Protocols: Your controller needs to support the communication protocols used by your smart devices. Common options include Wi-Fi, Zigbee, Z-Wave, or Bluetooth. <img src="" height="101" width="101" alt=""></li><hr>
             
         </ol>
-    </h1>
 
-    <h4 style="color: darkslategray;" >How It Works: : - </h4>
+    <h4>How It Works: : - </h4>
     <ol>
         <li>Setup and Configuration:
             <p>
