--- a/index.html
+++ b/index.html
@@ -8,10 +8,16 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@1,300&display=swap" rel="stylesheet">
+
 </head>
 <body>
-    <header><h1> &#127968; Automated-Smart-Touch-Panel for home &#127968; </h1></header>
-    <p> Creating an automated smart touch panel for home involves integrating various technologies and components to control and monitor different aspects of your home, such as lighting, temperature, security, and entertainment systems <br></p>
+    <header><h1>Automated-Smart-Touch-Panel<br>&#127968; home &#127968;</h1><br>
+    </header>
+    <p><b> Creating an automated smart touch panel for home involves integrating various technologies and components to control and monitor different aspects of your home, such as lighting, temperature, security, and entertainment systems </b> <br></p>
+    <div id="components">
         <h3>
             Here's an overview of how it works:
         </h3>
@@ -19,23 +25,23 @@
             Components Needed:
         </h4>
         <ol>
-            <li>Touch Panel: <br> You'll need a touchscreen display or a tablet that serves as the interface for controlling your smart home. This can be wall-mounted or portable. <img src= height="101" alt=""></li><hr>
-            <li>Microcontroller/Controller: <br> A microcontroller (like Arduino, Raspberry Pi, or specialized home automation controllers) acts as the brain of your system. It communicates with various devices and sensors and handles user inputs from the touch panel. <img src="" height="101" alt=""></li><hr>
-            <li>Smart Home Devices: <br> You'll need various smart devices compatible with your chosen controller. These can include smart lights, thermostats, door locks, cameras, and more. Ensure they use communication protocols like Wi-Fi, Zigbee, Z-Wave, or Bluetooth. <img src="g" height="101"></li><hr>
-            <li>Finely grated zest && juice of 1 lime <br> <img src="" height="101" width="101" alt="lime"> <img src="" height="91" width="91" alt=""></li><hr>
-            <li>Sensors: Communication Protocols: Your controller needs to support the communication protocols used by your smart devices. Common options include Wi-Fi, Zigbee, Z-Wave, or Bluetooth. <img src="" height="101" width="101" alt=""></li><hr>
+            <li>Touch Panel: <br> You'll need a touchscreen display or a tablet that serves as the interface for controlling your smart home. This can be wall-mounted or portable. <img src= height="101" alt=""></li><br>
+            <li>Microcontroller/Controller: <br> A microcontroller (like Arduino, Raspberry Pi, or specialized home automation controllers) acts as the brain of your system. It communicates with various devices and sensors and handles user inputs from the touch panel. <img src="" height="101" alt=""></li><br>
+            <li>Smart Home Devices: <br> You'll need various smart devices compatible with your chosen controller. These can include smart lights, thermostats, door locks, cameras, and more. Ensure they use communication protocols like Wi-Fi, Zigbee, Z-Wave, or Bluetooth. <img src="g" height="101"></li><br>
+            <li>Finely grated zest && juice of 1 lime <br> <img src="" height="101" width="101" alt="lime"> <img src="" height="91" width="91" alt=""></li><br>
+            <li>Sensors: Communication Protocols: Your controller needs to support the communication protocols used by your smart devices. Common options include Wi-Fi, Zigbee, Z-Wave, or Bluetooth. <img src="" height="101" width="101" alt=""></li><br>
             
         </ol>
+    </div>
 
-    <h4>How It Works: : - </h4>
+    <div id="procedure">
+        <h4>How It Works: : - </h4>
     <ol>
-        <li>Setup and Configuration:
-            <p>
+        <li>Setup and Configuration: <br>
                 Initially, you'll configure your smart devices and sensors to work with your controller. This often involves connecting them to your home Wi-Fi network or other communication networks.
-            </p>
         </li>
     </ol>
-    
+    </div>
 
 </body>
 </html>
